# serializer version: 1
# name: test_switch_platform[switch.hostname_discord_deafen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.hostname_discord_deafen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Discord deafen',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Discord deafen',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'discord_deafen',
    'unique_id': 'uuid_discord_deafen',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_platform[switch.hostname_discord_deafen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'hostname Discord deafen',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hostname_discord_deafen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_platform[switch.hostname_discord_mute-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.hostname_discord_mute',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Discord mute',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Discord mute',
    'platform': 'system_bridge',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'discord_mute',
    'unique_id': 'uuid_discord_mute',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_platform[switch.hostname_discord_mute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'hostname Discord mute',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hostname_discord_mute',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
